--- a/resources/sass/partials/_content.scss
+++ b/resources/sass/partials/_content.scss
@@ -59,7 +59,7 @@ header{
     
     .bg-comics{
         height: 400px;
-        background-image: url("../assets/img/jumbotron.jpg");
+        background-image: url('/images/jumbotron.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-position-x: center;
