--- a/public/css/app.css
+++ b/public/css/app.css
@@ -60,7 +60,7 @@ header .active a {
 
 #comics .bg-comics {
   height: 400px;
-  background-image: url("../assets/img/jumbotron.jpg");
+  background-image: url("/images/jumbotron.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position-x: center;
