--- a/resources/sass/partials/_content.scss
+++ b/resources/sass/partials/_content.scss
@@ -134,3 +134,110 @@ header{
     }
 
 }
+
+footer{
+    
+    .bg-footer{
+        // background-image: url('../assets/img/footer-bg.jpg');
+        background-image: url('/images/footer-bg.jpg');
+        height: 450px;
+    }
+
+    .container-footer{
+        width: $generalWidth;
+        margin: $generalMargin;
+        background-image: url('/images/dc-logo-bg.png');
+        background-repeat: no-repeat;
+        background-position: right;
+        height: 100%;
+        font-family: 'Roboto Condensed', sans-serif;
+    }
+
+    .container-nav-footer{
+        padding: 40px 0;
+        width: 45%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    nav{
+        padding-bottom: 20px;
+        h4{
+            color: $whiteColor;
+            text-transform: uppercase;
+            padding-bottom: 15px;
+            font-size: 1.5rem;
+        }
+
+        ul{
+        
+        li{
+                list-style: none;
+                padding-bottom: 5px;
+
+            a{
+                    text-decoration: none;
+                    color: grey;
+                    font-family: sans-serif;
+
+                    &:hover{
+                        text-decoration: underline;
+                    }
+                }
+            }
+        }
+    }
+
+    
+    .bg-followUs{
+        background-color: #303030;
+        height: 100px;
+    }
+
+    .followUs-container{
+        width: $generalWidth;
+        margin: $generalMargin;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .d-flex{
+        display: flex;
+    }
+
+    .btn-footer{
+        background-color: transparent;
+        border: 2px solid $primaryDCcolor;
+        padding: 15px;
+        text-transform: uppercase;
+        font-weight: bold;
+        color: $whiteColor;
+
+        &:hover{
+            cursor: pointer;
+            box-shadow: 2px 2px 2px black;
+        }
+    }
+
+    .text-follow{
+        display: flex;
+        align-items: center;
+        width: 100%;
+        h4{
+            text-transform: uppercase;
+            color: $primaryDCcolor;
+            padding-right: 15px;
+        }
+
+        img{
+            padding: 0 10px;
+
+            &:hover{
+                cursor: pointer;
+                filter: brightness(200%);
+            }
+        }
+    }
+}
