struttura css completata

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -91,15 +91,15 @@
 #single-comic .wrapper {
   width: 1140px;
   margin: 0 auto;
-  margin-bottom: 150px;
+  margin-bottom: 50px;
 }
 #single-comic .container-detail {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   font-family: "Roboto Condensed", sans-serif;
 }
 #single-comic .container-detail .info-comic {
-  width: 50%;
+  width: 70%;
 }
 #single-comic .container-detail .info-comic h2 {
   text-transform: uppercase;
@@ -110,7 +110,7 @@
   justify-content: space-between;
   align-items: center;
   height: 100%;
-  width: 60%;
+  width: 75%;
   padding: 15px;
   border-right: 1px solid #357739;
 }
@@ -124,7 +124,7 @@
   color: #bafd9c;
 }
 #single-comic .container-detail .info-comic .check-available {
-  width: 40%;
+  width: 25%;
   color: white;
   display: flex;
   justify-content: center;
@@ -138,6 +138,40 @@
   font-family: Arial, Helvetica, sans-serif, sans-serif;
   font-weight: bold;
   height: 50px;
+  margin-bottom: 25px;
+}
+#single-comic .bg-specs-comic {
+  background-color: #f6f6f6;
+  border-top: 1px solid #e3e3e3;
+  padding-bottom: 50px;
+}
+#single-comic .bg-specs-comic .wrapper {
+  width: 1140px;
+  margin: 0 auto;
+  padding-top: 15px;
+}
+#single-comic .bg-specs-comic .wrapper h2 {
+  margin-bottom: 20px;
+}
+#single-comic .bg-specs-comic .wrapper .d-flex {
+  display: flex;
+}
+#single-comic .bg-specs-comic .wrapper .d-flex .talent {
+  width: 50%;
+  margin-right: 30px;
+}
+#single-comic .bg-specs-comic .wrapper .d-flex .talent .d-flex {
+  justify-content: space-between;
+}
+#single-comic .bg-specs-comic .wrapper .d-flex .talent .d-flex p {
+  width: 70%;
+}
+#single-comic .bg-specs-comic .wrapper .d-flex .specs {
+  width: 50%;
+}
+#single-comic .bg-specs-comic .wrapper .d-flex .inner-specs {
+  padding: 15px 10px;
+  border-top: 1px solid #e3e3e3;
 }
 
 footer .bg-footer {
