--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32,7 +32,7 @@
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: baseline;
   justify-content: center;
   color: white;
   font-family: "Roboto Condensed", sans-serif;
@@ -66,10 +66,14 @@
   flex-basis: 16.6666666667%;
   padding-top: 45px;
 }
+#comics .card-comics a {
+  text-decoration: none;
+  color: currentColor;
+}
 #comics .card-comics h5 {
   font-weight: 400;
   text-transform: uppercase;
-  padding-top: 10px;
+  padding: 10px 5px;
 }
 #comics .card-comics:hover {
   cursor: pointer;
